# toto

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Evaluation.cpp  Makefile  README.md  main.cpp
scripts/: merger.py
src/: Action.cpp  Action.h  Algo.cpp  Algo.h  Algo.hpp  Board.cpp  Board.h  Cell.h  Evaluation.cpp  Evaluation.h  Grid.cpp  Grid.h  Point.h  Rules.cpp  Rules.h  Unit.cpp  Unit.h  Utils.cpp  Utils.h  inGameMain.txt  main.cpp
test/: ActionTest.cpp  AlgoTest.cpp  BoardTest.cpp  EvaluationTest.cpp  GridTest.cpp
